# ncar-dask-monitor

./: .gitignore  README.md  casper_resource_monitor  dask_reporter.py  dask_resource_monitor  qhist_runner.py  run_dask_mem_usage.py  setup.cfg
.github/workflows/: main.yml
ncar-dask-monitor/: dask_mem_usage.py  dask_reporter.py  qhist_parser.py  qhist_runner.py  report_generator.py  test_dask_mem_usage.py
ncar_dask_monitor/: __init__.py  casper_mem_usage.py  dask_mem_usage.py  dask_reporter.py  qhist_runner.py  report_generator.py
src/: csg_report.py  dask_reporter_dev.py  qhist_runner.py  test.py  user_report.py
tests/: __init__.py  test_dask_mem_usage.py  test_report_generator.py
