[metadata]
name = ncar_dask_monitor
version = 0.0.1
author = Negin Sobhani
author_email = negins@ucar.edu
description = This package provides some insight on memory usage of dask workers for one/all users.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/negin513//my_package
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = MIT

[options]
packages = find:
install_requires =
    numpy
    pandas
    tabulate
python_requires = >3.6
include_package_data = True
setup_requires = setuptools

[options.entry_points]
console_scripts =
    dask_resource_monitor = ncar_dask_monitor.dask_mem_usage:main
    casper_resource_monitor = ncar_dask_monitor.casper_resource_monitor
